Increase XX:MaxPermSize for the user.